syntax = "proto3";

package helloworld;

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

service HelloWorldService {
  rpc SayHello(HelloRequest) returns (HelloResponse) {}
}
